# game-prototypes

./: .gitignore  playtesting.txt
game1/: build.zig
game1/src/: main.zig
game1/src/base_layer/: render.zig
game2/: README.md  build.sh
game2/src/: overloads.odin  render.odin
game3/: build.bat
game3/src/: common.h  game.cpp  win32_platform.cpp
game4/: build.bat  build.sh  design.txt
game4/resources/levels/: A_New_Hope.level  Enlightend.level  High_Beam.level  Hold_It!.level  Islands.level  Mega_Light.level  Push_It.level  (+6 more)
game4/src/: ctx.odin  game.odin  main.odin  overloads.odin  render.odin
game5/: build.bat  imgui.ini  save.json
game5/src/: main.odin  window.odin
game6/: CMakeLists.txt  build.bat  imgui.ini
game6/resources/shaders/: fragment.shader  vertex.shader
game6/src/: HandmadeMath.h  common.cpp  game.h  hmm.cpp  libs.h  main.cpp  renderer.cpp  sound.cpp  window.cpp
game6/src/glad/: glad.cpp
game6/src/glad/src/: glad.c  glad.h
game6/src/libs/: libs.h
game6/src/libs/stb/: stb.cpp
libs/raygui/: raygui.h
odin-game/: Makefile  main.odin
odin-game/game/: game.odin
odin-game/shaders/: quad_shader.glsl  quad_shader.odin  triangle_shader.glsl  triangle_shader.odin
odin-game/src/: main.odin  render.odin
rougueTD/: Makefile  build.bat
rougueTD/src/: commands.odin  main.odin  overloads.odin  render.odin
round-based-survival/: build.zig  build.zig.zon
round-based-survival/src/: main.zig  render.zig
src/: main.zig  render.zig
wingame/: build.bat
wingame/src/: common.h  containers.cpp  game.cpp  game.h  main.cpp  main_win32.cpp  platform.h  platform_win32.h  win32_platform.cpp
(+33 files in other folders)
